--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -2,6 +2,7 @@
 \begin{defn}{}{mxtrans}
 Lad $A$ være en $m \times n$ matrix. \textbf{Transponeringen} til $A$, er en $n \times m$ matrix, noteret $A^T$, hvor $A$'s $(i,j)$'te indgang er den $(j,i)$'te indgang i $A^T$.
 \end{defn}
+\noindent
 En transponering af en matrice resulterer i en ny matrice, hvor rækkerne i den originale matrice kommer til at være søjlerne i den transponerede matrice.
 
 \begin{eks}\label{eks:trans}
@@ -41,8 +42,8 @@ A^T =
 \end{bmatrix}.
 \end{align*}
 \end{eks}
-
-Følgende sætning viser, at transponering bevarer operationerne matrix summering og skalering.
+%
+Følgende sætning viser, at transponering bevarer summering og skalering af matricer.
 \begin{thm}{}{}
 Lad $A$ og $B$ være $m \times n$ matricer, og lad $k$ være en skalar.
 Så har matricerne følgende egenskaber:
