--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -122,27 +122,6 @@ Dette gør den, da det er muligt at besøge alle punkter ved at indfører passen
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-\phantom{Julie er mega noice}
-\newline
-%
 Typisk bruges spannen til at undersøge, hvorvidt en givet vektor er i spannet for en vektormængde. 
 Dette gøres ved at undersøge om en vektor kan konstrueres som linear kombination af vektorerne i mængden. 
 Dette gøres ved hjælp af rækkereduktionsalgoritmen. 
@@ -256,7 +235,7 @@ Lad $B$ være den reducerede trappeform af $A$ og $\mathbf{e}_m$ er standard vek
         \vdots \\
         0 \\
         1 
-\end{bmatrix}.
+\end{bmatrix}
 \end{align*}
 %
 i $\R^m$. 
