--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -1,47 +1,57 @@
 \section{Lineære ligningssystemer }
 %
-
-\textbf{En lineær ligning} med variablerne, $x_1,x_2,\ldots ,x_n$, er en ligning som har formen
-$$ a_1x_1+a_2x_2+\cdots+a_nx_n=b$$ 
+En \textbf{lineær ligning} med variablerne, $x_1,x_2,\ldots ,x_n$, er en ligning som har formen
+$$ a_1x_1+a_2x_2+\cdots+a_nx_n=b,$$ 
 hvor $a_1,a_2,\ldots,a_n$ er reelle tal. 
-
+%
 \begin{defn}{}{}
-\textbf{Et lineært ligningssystem} er en mængde af $m$ lineære ligninger  med de samme $n$ variabler, hvor $m$ og $n$ er positive heltal.
+Et \textbf{lineært ligningssystem} er en mængde af $m$ lineære ligninger  med de samme $n$ variabler, hvor $m$ og $n$ er positive heltal.
 Dette kan skrives på formen
 \begin{align*}
 a_{11}x_1+a_{12}x_2+&\cdots+a_{1n}x_n=b_1\\
 a_{21}x_1+a_{22}x_2+&\cdots+a_{2n}x_n=b_2\\
 &\vdots\\
-a_{m1}x_1+a_{m2}x_2+&\cdots +a_{mn}x_n=b_m
+a_{m1}x_1+a_{m2}x_2+&\cdots +a_{mn}x_n=b_m.
 \end{align*}
-hvor er $a_{ij}$ betegner koefficienten af $x_j$ i ligning $i$
+hvor er $a_{ij}$ betegner koefficienten af $x_j$ i ligning $i$.
 \end{defn}
 \noindent
 Løsningen på et sådanne system er en vektor
 \begin{center}
-$\begin{bmatrix}
+$
+\mathbf{s} = 
+\begin{bmatrix}
 s_1\\
 s_2\\
 \vdots\\
 s_n
-\end{bmatrix}
+\end{bmatrix},
 $
 \end{center}
-i $\R ^n$ således at alle ligninger er opfyldt når $x_i$ bliver erstattet med $s_i$. Et eksempel på et lineært ligningssystem ses i eksempel \ref{eks}.
-\begin{eks}\label{eks}
+i $\R ^n$, således at alle ligninger er opfyldt når $x_i$ bliver erstattet med $s_i$. Et eksempel på et lineært ligningssystem ses i eksempel \ref{eks}.
+%
+\\
+\begin{eks}
+\label{eks}
+Givet ligningssystemet
+%
 \begin{align*}
 x_1-x_3-2x_4-8x_5&=-3 \\
 -2x_1+x_3+2x_4+9x_5&=5 \\
 3x_1-2x_3-3x_4-15x_5&=-9
 \end{align*}
-Løsningen på dette system ses i eksempel \ref{eks_gauss}
+%
+Løsningen på dette system ses i eksempel \ref{eks_gauss}.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
 \end{eks}
 Alle lineære ligningssystemer har enten ingen, præcis en eller uendelig mange løsninger.
 Alle ligningerne i systemet repræsenteres af linje hvis systemet er i 2 variable, og et plan i 3 variable, osv.
 Hvis disse ligninger er parallelle og forskellige, har systemet ingen løsning.
 Hvis ligningerne er forskellige, så har systemet præcis en løsning, som er hvor ligningerne krydser hinanden. 
 Hvis ligningerne er ens har systemet uendelig mange løsninger.\\
-Et system der har en eller flere løsninger kaldes \textit{konsistent}, ellers kaldes det for \textit{inkonsistent}, da der ingen løsninger eksisterer.
+Et system der har en eller flere løsninger kaldes \textbf{konsistent}, ellers kaldes det for \textbf{inkonsistent}, da der ingen løsninger eksisterer.
 \subsection{Ligningssystemer og matricer}
 Med udgangspunktet i eksmpel \ref{eks}, kan et lineært ligningssystem opstilles som en matrix ligning A\textbf{x}=\textbf{b}, hvor\\
 \begin{center}
@@ -73,7 +83,7 @@ $
 A kaldes for \textbf{koefficientmatricen}. 
 %efter hårdt sammenleje bliver A matricen og b til totalmatricen
 \textbf{Totalmatrixen} er dannet ved at kombinere koefficientmatricen med vektoren \textbf{b}.
-Totalmatrixen indeholder alle informationer der skal bruges til at løse et lineært ligningssystem.
+Totalmatrixen indeholder alle informationer, der skal bruges til at løse et lineært ligningssystem.
 Ligningssystemet fra eksempel \ref{eks} ses her skrevet som totalmatrix
 \begin{equation*}
   A=
