--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -1,21 +1,19 @@
 \section{Matricer og vektorer}
-% God arbejdslyst 
-
-%Noget indledningsvist - hvorfor er matricer/vektorer vigtige? 
-
-I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer er det nødvendigt at redegøre for \textit{matricer} og tilhørende notation. 
-
+%  
+% Noget indledningsvist - hvorfor er matricer/vektorer vigtige? 
+%
+I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer er det nødvendigt at redegøre for \textbf{matricer} og tilhørende notation. 
+%
 \begin{defn}{}{}
-En matrix er en rektangulær tabel, hvis elementer er \textit{skalarer}, der er $k \in \R$. 
+En matrix er en rektangulær tabel, hvis elementer er \textbf{skalarer}, der er $k \in \R$. 
 En matrix med $m$ rækker og $n$ søjler har størrelsen $m \times n$.
 Hvis $m=n$, er matricen kvadratisk. 
-Elementet $a_{i,j}$ i $i'te$ række og $j'te$ søjle kaldes $(i,j)$-indgangen i matricen. 
+Elementet $a_{i,j}$ i $i$'te række og $j$'te søjle kaldes $(i,j)$'te-indgangen i matricen. 
 \end{defn}
-
-%HVORFOR DUR REFERENCER IKKE HVAD FUCK HJÆLP FOR SATAN
-
+\noindent
+%
 På figur \ref{fig:matrix_gen_eks} ses et generelt eksempel på en matrix $A = m \times n$.
-
+%
 \begin{figure}[H]
 	\begin{center}
 $$
@@ -31,8 +29,13 @@ $$
 	\caption{En generel matrix $A=m \times n$.}
 	\label{fig:matrix_gen_eks}
 \end{figure}
-
-Enhver række $i$ eller søjle $j$ er en \textit{vektor}. En matrix med én række kaldes en \textit{rækkevektor}, og en matrix med én søjle kaldes en \textit{søjlevektor}. I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{a}$ og $\textbf{b}$. Søjlevektorer noteres desuden ofte med et indeks tilsvarende søjlen i matricen, således 
+\noindent
+%
+Enhver række $i$ eller søjle $j$ er en \textbf{vektor}. 
+En matrix med én række kaldes en \textbf{rækkevektor}, og en matrix med én søjle kaldes en \textbf{søjlevektor}. 
+I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{a}$ og $\textbf{b}$. 
+Søjlevektorer noteres desuden ofte med et indeks tilsvarende søjlen i matricen, således 
+%
 $$
 \textbf{a}_j= 
 \begin{bmatrix}
@@ -40,15 +43,5 @@ a_{1,j} \\
 a_{2,} \\
 \vdots \\
 a_{i,j} \\
-\end{bmatrix}
-$$. 
-
-
-
-
-
-
-
-
-
-
+\end{bmatrix}.
+$$ 
