--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -6,7 +6,7 @@ Lad $A$ og $B$ være $m \times n$ matricer.
 Ligeledes er subtraktion mellem matricerne $A$ og $B$ muligt og indgangene i den resulterende matrix er $a_{i,j} - b_{i,j}$.
 Lad nu $k$ være en skalar.
 \textbf{Skalering} af $A$, noteret $kA$, er en $m \times n$ matrix, hvor de $(i,j)$'te indgange er $ka_{i,j}$.
-Bemærk at $1A = A$, $-1A = -A$ og $0A = O$.
+Bemærk, at $1A = A$, $-1A = -A$ og $0A = O$.
 \end{defn}
 %
 \begin{eks}
@@ -78,12 +78,14 @@ Så har matricerne følgende egenskaber:
 Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
 Betragt både $A + B$ og $B + A$ og se, jævnfør \ref{defn:mxsum}, at de $(i,j)$'te indgange bliver henholdsvis $a_{i,j} + b_{i,j}$ og $b_{i,j} + a_{i,j}$, hvilket beviser (a).
 Ligeledes kan ses det, at $(a_{i,j} + b_{i,j}) + c_{i,j} = a_{i,j} + (b_{i,j} + c_{i,j})$, hvilket beviser (b).
-Endvidere kan der isoleres for null i $a_{i,j} + 0 = a_{i,j}$ for at få $a_{i,j} + (-a_{i,j}) = 0$, hvilket beviser (c) og (d), da alle indgange i en null matrix er $0$.
-
+Endvidere kan der isoleres for nul i $a_{i,j} + 0 = a_{i,j}$ for at få $a_{i,j} + (-a_{i,j}) = 0$, hvilket beviser (c) og (d), da alle indgange i en nulmatrix er $0$.
+\\\\
 Betragt skaleringen af $A$ med skalaren $ks$, som er et produkt af skalarene $k$ og $s$, og skaleringen af $A$ med $k$ og så $s$.
 For indgangene i disse skaleringer findes ligheden $(ks)a_{i,j} = s(ka_{i,j})$, hvilket beviser (e).
 Ligeledes betragtes indgangene for begge sider af ligheden i (f) og det ses, at $k(a_{i,j} + b_{i,j}) = ka_{i,j} + kb_{i,j}$, hvilket beviser (f).
 Det samme gøres for ligheden i (g) og ligheden $(k + s)a_{i,j} = ka_{i,j} + sa_{i,j}$ opstilles, hvilket beviser (g).
 \end{proof}
-
+\noindent
+\\
+%
 Da vektorer er matricer med enten én række eller én søjle er samme operationer mulige og opfylder samme egenskaber.
