--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -93,9 +93,8 @@ $
 i $\R^n$ kan skrives som linearkombination af $I_n$ i $R^n$. 
 Givet to ikke-parallelle vektorer $u$ og $v$ i $\R^2$, så er enhver anden vektor i $\R^2$ en linearkombination af $u$ og $v$. 
 Hvis skalarerne i en linearkombination i stedet er vektorer, så er der tale om et \textbf{matrix-vektorprodukt}.
-
+%
 \begin{defn}{}{mvp}
-\phantom{gdfs}\\
 Lad $A$ være en $m \times n$ matrix og \textbf{v} være en $n \times 1$ vektor. 
 Matrix-vektor-produktet af $A$ og $\textbf{v}$ defineres som den lineære kombination af søjlerne i $A$, hvis koefficienter er de tilsvarende komponenter af $\textbf{v}$, og noteres $A\textbf{v}$. 
 Det vil sige
@@ -104,7 +103,8 @@ A\textbf{v} =v_1\textbf{a}_1 + v_2\textbf{a}_2 + \cdots + v_n\textbf{a}_n.
 \end{align*}
 \end{defn}
 \noindent
-For at $A\textbf{v}$ eksisterer, skal der være lige mange komponenter i \textbf{v} som søjler i $A$. Et eksempel på et matrix-vektor-produkt mellem en matrix $B$ og en vektor \textbf{u} ses i eksempel \ref{Matrix-vektor}.
+For at $A\textbf{v}$ eksisterer, skal der være lige mange komponenter i \textbf{v} som søjler i $A$. 
+Et eksempel på et matrix-vektor-produkt mellem en matrix $B$ og en vektor \textbf{u} ses i eksempel \ref{Matrix-vektor}.
 \\
 %
 \begin{eks}
@@ -199,4 +199,3 @@ B\textbf{u}=
 $$
 \end{center}
 \end{eks}
- 
