--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -1,5 +1,5 @@
-\subsection{Specielle matricer} %skal måske hedde noget andet? 
-
+\subsection{Specielle matricer} 
+% Skal måske hedde noget andet? 
 To specielle matricer er nødvendige at introducere, da de benyttes i nærværende projekt. Den første er \textbf{nulmatricen}. I en nulmatrice er alle elementer $0$, og en $m \times n$ nulmatrice noteres $0_{m,n}$.
 % 
 % Er det korrekt notation? Fandt det på wiki hehehehe
