--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -4,9 +4,13 @@ Lad $A$ være en $m \times n$ matrix. \textbf{Transponeringen} til $A$, er en $n
 \end{defn}
 \noindent
 En transponering af en matrice resulterer i en ny matrice, hvor rækkerne i den originale matrice kommer til at være søjlerne i den transponerede matrice.
-
-\begin{eks}\label{eks:trans}
+\\
+%
+\begin{eks}
+\label{eks:trans}
+%
 Betragt nu $A^T$ og $(A+B)^T$, hvor 
+%
 \begin{align*}
 A= 
 \begin{bmatrix}
@@ -20,7 +24,9 @@ B=
 5	&	3	&	2
 \end{bmatrix}.
 \end{align*}
+%
 Jævnfør definition \ref{defn:mxtrans} haves
+%
 \begin{align*}
 A^T =
 \begin{bmatrix}
@@ -41,9 +47,13 @@ A^T =
 2	&	6
 \end{bmatrix}.
 \end{align*}
+%
 \end{eks}
 %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
 Følgende sætning viser, at transponering bevarer summering og skalering af matricer.
+%
 \begin{thm}{}{}
 Lad $A$ og $B$ være $m \times n$ matricer, og lad $k$ være en skalar.
 Så har matricerne følgende egenskaber:
@@ -53,7 +63,7 @@ Så har matricerne følgende egenskaber:
 \item $(A^T)^T = A$.
 \end{enumerate}
 \end{thm}
-
+%
 \begin{proof}
 Lad $A$ og $B$ være $m \times n$ matricer og lad $k$ være en skalar.
 Det vides at indgangene i $A+B$ er $a_{i,j} + b_{i,j}$ og transponeringen af dette resulterer $n \times m$ matrix med indgangende $a_{j,i} + b_{j,i}$.
