Update linear_uafhangighed.tex and master.tex

--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -3,7 +3,7 @@
 \textcolor{red}{Intro - kort tekst xD}
 % 
 \begin{defn}{Lineær afhængighed og lineær uafhængighed}{}
-Et sæt af vektorerne $\mathbf{v}_1, \ldots , \mathbf{v}_k$ i $\R^n$ kaldes \textbf{lineært uafhængige}, hvis der eksistere skalare $x_1,x_2, \ldots , x_l$, sådan at ligningen 
+Et sæt af vektorerne $\mathbf{v}_1, \ldots , \mathbf{v}_k$ i $\R^n$ kaldes \textbf{lineært uafhængige}, hvis der eksisterer skalarer $x_1,x_2, \ldots , x_l$, sådan at ligningen 
 \begin{align*}
 x_1\mathbf{v}_1 + \ldots + x_k \mathbf{v}_k = \mathbf{0}, 
 \end{align*}
@@ -104,6 +104,7 @@ Hvilket vil sige at
 %
 og sætningen er hermed bevist.
 %
+\\\\
 \textcolor{red}{Mangler beviset modsat (da det er en hvis og kun hvis)}
 %
 \end{proof}
