--- a/incl/main/linear_algebra/Lineaer_afbilding.tex
+++ b/incl/main/linear_algebra/Lineaer_afbilding.tex
@@ -1,5 +1,7 @@
 \section{Lineær transformation}
+%
 Vi definerer en funktion ved følgende:
+%
 \begin{defn}{}{}
 Lad $\S _1 \subset \R^n$ og $\S _2 \subset \R^m$.
 En funktion $f$ fra $\S_1$ til $\S_2$, noteret $f:\S_1\rightarrow\S_2$, tildeler enhver vektor $\textbf{v}$ i $\S_1$, en unik vektor $f(\textbf{v})$ i $\S_2$.
@@ -7,3 +9,6 @@ Vektoren $f(\textbf{v})$ kaldes en \textbf{afbildning} af $\textbf{v}$.
 $\S_1$ er domænet for funktionen $f$ mens $\S_2$ kaldes codomænet til $f$.
 Værdimængden for $f$ er defineret som mængden af afbildninger, $f(\textbf{v})$, for alle $\textbf{v}\in \S_1$.
 \end{defn}
+%Lav flot figur som 2.9 på side 167.
+\input{fig/tikz/dom}
+
