--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -86,6 +86,7 @@ A\textbf{b}_1=
 12 \\
 34
 \end{bmatrix}
+\text{.}
 $$
 Dermed er 
 $$
@@ -101,4 +102,19 @@ A\textbf{b}_1 & A\textbf{b}_2
 \end{bmatrix}
 $$
 \end{eks}
-Da matricen $B$ inddeles i sine søjlevektorer, er grundprincippet i matrixmultiplikation at finde matrix-vektorprodukter. 
+Da matricen $B$ inddeles i sine søjlevektorer, er grundprincippet i matrixmultiplikation at finde matrix-vektorprodukter.\\\\
+En række egenskaber gælder for matrixmultiplikation, som summeret i særning \ref{thm:mxmulti}.
+
+\begin{thm}{}{}\label{thm:mxmulti}
+Lad $A$ og $B$ være $k \times m$ matricer, $C$ være en $m \times n$ matrix, og $P$ og $Q$ være $n \times p$ matricer. Følgende udsagn er dermed sande:\\\\
+(a) $s(AC)=(sA)C=A(sC)$ for en vilkårlig skalar $s$.\\
+(b) $A(CP)=(AC)P$.\\
+(c) $(A+B)C=AC+BC$.\\
+(d) $C(P+Q)=CP+CQ$.\\
+(e) $I_kA=A=AI_m$.\\
+(f) Produktet af en nulmatrice og an vilkårlig matrice er altid $0$.\\
+(g) $(AC)^T=C^TA^T$.
+\end{thm}
+\begin{proof}
+asdf
+\end{proof}
